y.output
Terminals which are not used

   RESERVED


Grammar

    0 $accept: Start $end

    1 Start: Program

    2 Program: ProgramHeading SEMIC ProgramBlock DOT

    3 ProgramHeading: PROGRAM ID LBRAC OUTPUT RBRAC

    4 ProgramBlock: VarPart FuncPart StatPart

    5 VarPart: VAR VarDecl SEMIC AditionalVarPart
    6        | /* empty */

    7 AditionalVarPart: VarDecl SEMIC AditionalVarPart
    8                 | /* empty */

    9 VarDecl: IdList COLON ID

   10 IdList: ID AditionalIds

   11 AditionalIds: COMMA ID AditionalIds
   12             | /* empty */

   13 FuncPart: FuncDecl SEMIC FuncPart
   14         | /* empty */

   15 FuncDecl: FuncHeading SEMIC FORWARD
   16         | FuncIdent SEMIC FuncBlock
   17         | FuncHeading SEMIC FuncBlock

   18 FuncHeading: FUNCTION ID COLON ID
   19            | FUNCTION ID FormalParamsList COLON ID

   20 FuncIdent: FUNCTION ID

   21 FormalParamsList: LBRAC FormalParams AditionalFormalParams RBRAC

   22 AditionalFormalParams: SEMIC FormalParams AditionalFormalParams
   23                      | /* empty */

   24 FormalParams: IdList COLON ID
   25             | VAR IdList COLON ID

   26 FuncBlock: VarPart StatPart

   27 StatPart: CompStat

   28 CompStat: BEGIN1 StatList END

   29 StatList: Statement AditionalStatList

   30 AditionalStatList: SEMIC Statement AditionalStatList
   31                  | /* empty */

   32 Statement: CompStat
   33          | IF Expression THEN Statement ELSE Statement
   34          | IF Expression THEN Statement
   35          | WHILE Expression DO Statement
   36          | REPEAT StatList UNTIL Expression
   37          | VAL LBRAC PARAMSTR LBRAC Expression RBRAC COMMA ID RBRAC
   38          | ID ASSIGN Expression
   39          | WRITELN
   40          | WRITELN Writeln
   41          | /* empty */

   42 Writeln: LBRAC Expression AditionalWriteln RBRAC
   43        | LBRAC STRING AditionalWriteln RBRAC

   44 AditionalWriteln: COMMA Expression AditionalWriteln
   45                 | COMMA STRING AditionalWriteln
   46                 | /* empty */

   47 Expression: SimpleExpression
   48           | SimpleExpression OP2 SimpleExpression

   49 SimpleExpression: SimpleExpression OP3 Terminal
   50                 | SimpleExpression OR Terminal
   51                 | OP3 Terminal
   52                 | Terminal

   53 Terminal: Terminal OP4 Terminal
   54         | Terminal AND Terminal
   55         | Factor

   56 Factor: ID
   57       | INTLIT
   58       | REALLIT
   59       | FuncDesign
   60       | LBRAC Expression RBRAC
   61       | NOT Factor

   62 FuncDesign: ID ParamList

   63 ParamList: LBRAC Expression AditionalParams RBRAC

   64 AditionalParams: COMMA Expression AditionalParams
   65                | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 3 9 10 11 18 19 20 24 25 37 38 56 62
INTLIT (259) 57
REALLIT (260) 58
STRING (261) 43 45
ASSIGN (262) 38
BEGIN1 (263) 28
COLON (264) 9 18 19 24 25
COMMA (265) 11 37 44 45 64
DO (266) 35
DOT (267) 2
ELSE (268) 33
END (269) 28
FORWARD (270) 15
FUNCTION (271) 18 19 20
IF (272) 33 34
LBRAC (273) 3 21 37 42 43 60 63
NOT (274) 61
OUTPUT (275) 3
PARAMSTR (276) 37
PROGRAM (277) 3
RBRAC (278) 3 21 37 42 43 60 63
REPEAT (279) 36
SEMIC (280) 2 5 7 13 15 16 17 22 30
THEN (281) 33 34
UNTIL (282) 36
VAL (283) 37
VAR (284) 5 25
WHILE (285) 35
WRITELN (286) 39 40
AND (287) 54
OR (288) 50
OP2 (289) 48
OP3 (290) 49 51
OP4 (291) 53
RESERVED (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Start (39)
    on left: 1, on right: 0
Program (40)
    on left: 2, on right: 1
ProgramHeading (41)
    on left: 3, on right: 2
ProgramBlock (42)
    on left: 4, on right: 2
VarPart (43)
    on left: 5 6, on right: 4 26
AditionalVarPart (44)
    on left: 7 8, on right: 5 7
VarDecl (45)
    on left: 9, on right: 5 7
IdList (46)
    on left: 10, on right: 9 24 25
AditionalIds (47)
    on left: 11 12, on right: 10 11
FuncPart (48)
    on left: 13 14, on right: 4 13
FuncDecl (49)
    on left: 15 16 17, on right: 13
FuncHeading (50)
    on left: 18 19, on right: 15 17
FuncIdent (51)
    on left: 20, on right: 16
FormalParamsList (52)
    on left: 21, on right: 19
AditionalFormalParams (53)
    on left: 22 23, on right: 21 22
FormalParams (54)
    on left: 24 25, on right: 21 22
FuncBlock (55)
    on left: 26, on right: 16 17
StatPart (56)
    on left: 27, on right: 4 26
CompStat (57)
    on left: 28, on right: 27 32
StatList (58)
    on left: 29, on right: 28 36
AditionalStatList (59)
    on left: 30 31, on right: 29 30
Statement (60)
    on left: 32 33 34 35 36 37 38 39 40 41, on right: 29 30 33 34 35
Writeln (61)
    on left: 42 43, on right: 40
AditionalWriteln (62)
    on left: 44 45 46, on right: 42 43 44 45
Expression (63)
    on left: 47 48, on right: 33 34 35 36 37 38 42 44 60 63 64
SimpleExpression (64)
    on left: 49 50 51 52, on right: 47 48 49 50
Terminal (65)
    on left: 53 54 55, on right: 49 50 51 52 53 54
Factor (66)
    on left: 56 57 58 59 60 61, on right: 55 61
FuncDesign (67)
    on left: 62, on right: 59
ParamList (68)
    on left: 63, on right: 62
AditionalParams (69)
    on left: 64 65, on right: 63 64


state 0

    0 $accept: . Start $end

    PROGRAM  shift, and go to state 1

    Start           go to state 2
    Program         go to state 3
    ProgramHeading  go to state 4


state 1

    3 ProgramHeading: PROGRAM . ID LBRAC OUTPUT RBRAC

    ID  shift, and go to state 5


state 2

    0 $accept: Start . $end

    $end  shift, and go to state 6


state 3

    1 Start: Program .

    $default  reduce using rule 1 (Start)


state 4

    2 Program: ProgramHeading . SEMIC ProgramBlock DOT

    SEMIC  shift, and go to state 7


state 5

    3 ProgramHeading: PROGRAM ID . LBRAC OUTPUT RBRAC

    LBRAC  shift, and go to state 8


state 6

    0 $accept: Start $end .

    $default  accept


state 7

    2 Program: ProgramHeading SEMIC . ProgramBlock DOT

    VAR  shift, and go to state 9

    $default  reduce using rule 6 (VarPart)

    ProgramBlock  go to state 10
    VarPart       go to state 11


state 8

    3 ProgramHeading: PROGRAM ID LBRAC . OUTPUT RBRAC

    OUTPUT  shift, and go to state 12


state 9

    5 VarPart: VAR . VarDecl SEMIC AditionalVarPart

    ID  shift, and go to state 13

    VarDecl  go to state 14
    IdList   go to state 15


state 10

    2 Program: ProgramHeading SEMIC ProgramBlock . DOT

    DOT  shift, and go to state 16


state 11

    4 ProgramBlock: VarPart . FuncPart StatPart

    FUNCTION  shift, and go to state 17

    $default  reduce using rule 14 (FuncPart)

    FuncPart     go to state 18
    FuncDecl     go to state 19
    FuncHeading  go to state 20
    FuncIdent    go to state 21


state 12

    3 ProgramHeading: PROGRAM ID LBRAC OUTPUT . RBRAC

    RBRAC  shift, and go to state 22


state 13

   10 IdList: ID . AditionalIds

    COMMA  shift, and go to state 23

    $default  reduce using rule 12 (AditionalIds)

    AditionalIds  go to state 24


state 14

    5 VarPart: VAR VarDecl . SEMIC AditionalVarPart

    SEMIC  shift, and go to state 25


state 15

    9 VarDecl: IdList . COLON ID

    COLON  shift, and go to state 26


state 16

    2 Program: ProgramHeading SEMIC ProgramBlock DOT .

    $default  reduce using rule 2 (Program)


state 17

   18 FuncHeading: FUNCTION . ID COLON ID
   19            | FUNCTION . ID FormalParamsList COLON ID
   20 FuncIdent: FUNCTION . ID

    ID  shift, and go to state 27


state 18

    4 ProgramBlock: VarPart FuncPart . StatPart

    BEGIN1  shift, and go to state 28

    StatPart  go to state 29
    CompStat  go to state 30


state 19

   13 FuncPart: FuncDecl . SEMIC FuncPart

    SEMIC  shift, and go to state 31


state 20

   15 FuncDecl: FuncHeading . SEMIC FORWARD
   17         | FuncHeading . SEMIC FuncBlock

    SEMIC  shift, and go to state 32


state 21

   16 FuncDecl: FuncIdent . SEMIC FuncBlock

    SEMIC  shift, and go to state 33


state 22

    3 ProgramHeading: PROGRAM ID LBRAC OUTPUT RBRAC .

    $default  reduce using rule 3 (ProgramHeading)


state 23

   11 AditionalIds: COMMA . ID AditionalIds

    ID  shift, and go to state 34


state 24

   10 IdList: ID AditionalIds .

    $default  reduce using rule 10 (IdList)


state 25

    5 VarPart: VAR VarDecl SEMIC . AditionalVarPart

    ID  shift, and go to state 13

    $default  reduce using rule 8 (AditionalVarPart)

    AditionalVarPart  go to state 35
    VarDecl           go to state 36
    IdList            go to state 15


state 26

    9 VarDecl: IdList COLON . ID

    ID  shift, and go to state 37


state 27

   18 FuncHeading: FUNCTION ID . COLON ID
   19            | FUNCTION ID . FormalParamsList COLON ID
   20 FuncIdent: FUNCTION ID .

    COLON  shift, and go to state 38
    LBRAC  shift, and go to state 39

    $default  reduce using rule 20 (FuncIdent)

    FormalParamsList  go to state 40


state 28

   28 CompStat: BEGIN1 . StatList END

    ID       shift, and go to state 41
    BEGIN1   shift, and go to state 28
    IF       shift, and go to state 42
    REPEAT   shift, and go to state 43
    VAL      shift, and go to state 44
    WHILE    shift, and go to state 45
    WRITELN  shift, and go to state 46

    $default  reduce using rule 41 (Statement)

    CompStat   go to state 47
    StatList   go to state 48
    Statement  go to state 49


state 29

    4 ProgramBlock: VarPart FuncPart StatPart .

    $default  reduce using rule 4 (ProgramBlock)


state 30

   27 StatPart: CompStat .

    $default  reduce using rule 27 (StatPart)


state 31

   13 FuncPart: FuncDecl SEMIC . FuncPart

    FUNCTION  shift, and go to state 17

    $default  reduce using rule 14 (FuncPart)

    FuncPart     go to state 50
    FuncDecl     go to state 19
    FuncHeading  go to state 20
    FuncIdent    go to state 21


state 32

   15 FuncDecl: FuncHeading SEMIC . FORWARD
   17         | FuncHeading SEMIC . FuncBlock

    FORWARD  shift, and go to state 51
    VAR      shift, and go to state 9

    $default  reduce using rule 6 (VarPart)

    VarPart    go to state 52
    FuncBlock  go to state 53


state 33

   16 FuncDecl: FuncIdent SEMIC . FuncBlock

    VAR  shift, and go to state 9

    $default  reduce using rule 6 (VarPart)

    VarPart    go to state 52
    FuncBlock  go to state 54


state 34

   11 AditionalIds: COMMA ID . AditionalIds

    COMMA  shift, and go to state 23

    $default  reduce using rule 12 (AditionalIds)

    AditionalIds  go to state 55


state 35

    5 VarPart: VAR VarDecl SEMIC AditionalVarPart .

    $default  reduce using rule 5 (VarPart)


state 36

    7 AditionalVarPart: VarDecl . SEMIC AditionalVarPart

    SEMIC  shift, and go to state 56


state 37

    9 VarDecl: IdList COLON ID .

    $default  reduce using rule 9 (VarDecl)


state 38

   18 FuncHeading: FUNCTION ID COLON . ID

    ID  shift, and go to state 57


state 39

   21 FormalParamsList: LBRAC . FormalParams AditionalFormalParams RBRAC

    ID   shift, and go to state 13
    VAR  shift, and go to state 58

    IdList        go to state 59
    FormalParams  go to state 60


state 40

   19 FuncHeading: FUNCTION ID FormalParamsList . COLON ID

    COLON  shift, and go to state 61


state 41

   38 Statement: ID . ASSIGN Expression

    ASSIGN  shift, and go to state 62


state 42

   33 Statement: IF . Expression THEN Statement ELSE Statement
   34          | IF . Expression THEN Statement

    ID       shift, and go to state 63
    INTLIT   shift, and go to state 64
    REALLIT  shift, and go to state 65
    LBRAC    shift, and go to state 66
    NOT      shift, and go to state 67
    OP3      shift, and go to state 68

    Expression        go to state 69
    SimpleExpression  go to state 70
    Terminal          go to state 71
    Factor            go to state 72
    FuncDesign        go to state 73


state 43

   36 Statement: REPEAT . StatList UNTIL Expression

    ID       shift, and go to state 41
    BEGIN1   shift, and go to state 28
    IF       shift, and go to state 42
    REPEAT   shift, and go to state 43
    VAL      shift, and go to state 44
    WHILE    shift, and go to state 45
    WRITELN  shift, and go to state 46

    $default  reduce using rule 41 (Statement)

    CompStat   go to state 47
    StatList   go to state 74
    Statement  go to state 49


state 44

   37 Statement: VAL . LBRAC PARAMSTR LBRAC Expression RBRAC COMMA ID RBRAC

    LBRAC  shift, and go to state 75


state 45

   35 Statement: WHILE . Expression DO Statement

    ID       shift, and go to state 63
    INTLIT   shift, and go to state 64
    REALLIT  shift, and go to state 65
    LBRAC    shift, and go to state 66
    NOT      shift, and go to state 67
    OP3      shift, and go to state 68

    Expression        go to state 76
    SimpleExpression  go to state 70
    Terminal          go to state 71
    Factor            go to state 72
    FuncDesign        go to state 73


state 46

   39 Statement: WRITELN .
   40          | WRITELN . Writeln

    LBRAC  shift, and go to state 77

    $default  reduce using rule 39 (Statement)

    Writeln  go to state 78


state 47

   32 Statement: CompStat .

    $default  reduce using rule 32 (Statement)


state 48

   28 CompStat: BEGIN1 StatList . END

    END  shift, and go to state 79


state 49

   29 StatList: Statement . AditionalStatList

    SEMIC  shift, and go to state 80

    $default  reduce using rule 31 (AditionalStatList)

    AditionalStatList  go to state 81


state 50

   13 FuncPart: FuncDecl SEMIC FuncPart .

    $default  reduce using rule 13 (FuncPart)


state 51

   15 FuncDecl: FuncHeading SEMIC FORWARD .

    $default  reduce using rule 15 (FuncDecl)


state 52

   26 FuncBlock: VarPart . StatPart

    BEGIN1  shift, and go to state 28

    StatPart  go to state 82
    CompStat  go to state 30


state 53

   17 FuncDecl: FuncHeading SEMIC FuncBlock .

    $default  reduce using rule 17 (FuncDecl)


state 54

   16 FuncDecl: FuncIdent SEMIC FuncBlock .

    $default  reduce using rule 16 (FuncDecl)


state 55

   11 AditionalIds: COMMA ID AditionalIds .

    $default  reduce using rule 11 (AditionalIds)


state 56

    7 AditionalVarPart: VarDecl SEMIC . AditionalVarPart

    ID  shift, and go to state 13

    $default  reduce using rule 8 (AditionalVarPart)

    AditionalVarPart  go to state 83
    VarDecl           go to state 36
    IdList            go to state 15


state 57

   18 FuncHeading: FUNCTION ID COLON ID .

    $default  reduce using rule 18 (FuncHeading)


state 58

   25 FormalParams: VAR . IdList COLON ID

    ID  shift, and go to state 13

    IdList  go to state 84


state 59

   24 FormalParams: IdList . COLON ID

    COLON  shift, and go to state 85


state 60

   21 FormalParamsList: LBRAC FormalParams . AditionalFormalParams RBRAC

    SEMIC  shift, and go to state 86

    $default  reduce using rule 23 (AditionalFormalParams)

    AditionalFormalParams  go to state 87


state 61

   19 FuncHeading: FUNCTION ID FormalParamsList COLON . ID

    ID  shift, and go to state 88


state 62

   38 Statement: ID ASSIGN . Expression

    ID       shift, and go to state 63
    INTLIT   shift, and go to state 64
    REALLIT  shift, and go to state 65
    LBRAC    shift, and go to state 66
    NOT      shift, and go to state 67
    OP3      shift, and go to state 68

    Expression        go to state 89
    SimpleExpression  go to state 70
    Terminal          go to state 71
    Factor            go to state 72
    FuncDesign        go to state 73


state 63

   56 Factor: ID .
   62 FuncDesign: ID . ParamList

    LBRAC  shift, and go to state 90

    $default  reduce using rule 56 (Factor)

    ParamList  go to state 91


state 64

   57 Factor: INTLIT .

    $default  reduce using rule 57 (Factor)


state 65

   58 Factor: REALLIT .

    $default  reduce using rule 58 (Factor)


state 66

   60 Factor: LBRAC . Expression RBRAC

    ID       shift, and go to state 63
    INTLIT   shift, and go to state 64
    REALLIT  shift, and go to state 65
    LBRAC    shift, and go to state 66
    NOT      shift, and go to state 67
    OP3      shift, and go to state 68

    Expression        go to state 92
    SimpleExpression  go to state 70
    Terminal          go to state 71
    Factor            go to state 72
    FuncDesign        go to state 73


state 67

   61 Factor: NOT . Factor

    ID       shift, and go to state 63
    INTLIT   shift, and go to state 64
    REALLIT  shift, and go to state 65
    LBRAC    shift, and go to state 66
    NOT      shift, and go to state 67

    Factor      go to state 93
    FuncDesign  go to state 73


state 68

   51 SimpleExpression: OP3 . Terminal

    ID       shift, and go to state 63
    INTLIT   shift, and go to state 64
    REALLIT  shift, and go to state 65
    LBRAC    shift, and go to state 66
    NOT      shift, and go to state 67

    Terminal    go to state 94
    Factor      go to state 72
    FuncDesign  go to state 73


state 69

   33 Statement: IF Expression . THEN Statement ELSE Statement
   34          | IF Expression . THEN Statement

    THEN  shift, and go to state 95


state 70

   47 Expression: SimpleExpression .
   48           | SimpleExpression . OP2 SimpleExpression
   49 SimpleExpression: SimpleExpression . OP3 Terminal
   50                 | SimpleExpression . OR Terminal

    OR   shift, and go to state 96
    OP2  shift, and go to state 97
    OP3  shift, and go to state 98

    $default  reduce using rule 47 (Expression)


state 71

   52 SimpleExpression: Terminal .
   53 Terminal: Terminal . OP4 Terminal
   54         | Terminal . AND Terminal

    AND  shift, and go to state 99
    OP4  shift, and go to state 100

    $default  reduce using rule 52 (SimpleExpression)


state 72

   55 Terminal: Factor .

    $default  reduce using rule 55 (Terminal)


state 73

   59 Factor: FuncDesign .

    $default  reduce using rule 59 (Factor)


state 74

   36 Statement: REPEAT StatList . UNTIL Expression

    UNTIL  shift, and go to state 101


state 75

   37 Statement: VAL LBRAC . PARAMSTR LBRAC Expression RBRAC COMMA ID RBRAC

    PARAMSTR  shift, and go to state 102


state 76

   35 Statement: WHILE Expression . DO Statement

    DO  shift, and go to state 103


state 77

   42 Writeln: LBRAC . Expression AditionalWriteln RBRAC
   43        | LBRAC . STRING AditionalWriteln RBRAC

    ID       shift, and go to state 63
    INTLIT   shift, and go to state 64
    REALLIT  shift, and go to state 65
    STRING   shift, and go to state 104
    LBRAC    shift, and go to state 66
    NOT      shift, and go to state 67
    OP3      shift, and go to state 68

    Expression        go to state 105
    SimpleExpression  go to state 70
    Terminal          go to state 71
    Factor            go to state 72
    FuncDesign        go to state 73


state 78

   40 Statement: WRITELN Writeln .

    $default  reduce using rule 40 (Statement)


state 79

   28 CompStat: BEGIN1 StatList END .

    $default  reduce using rule 28 (CompStat)


state 80

   30 AditionalStatList: SEMIC . Statement AditionalStatList

    ID       shift, and go to state 41
    BEGIN1   shift, and go to state 28
    IF       shift, and go to state 42
    REPEAT   shift, and go to state 43
    VAL      shift, and go to state 44
    WHILE    shift, and go to state 45
    WRITELN  shift, and go to state 46

    $default  reduce using rule 41 (Statement)

    CompStat   go to state 47
    Statement  go to state 106


state 81

   29 StatList: Statement AditionalStatList .

    $default  reduce using rule 29 (StatList)


state 82

   26 FuncBlock: VarPart StatPart .

    $default  reduce using rule 26 (FuncBlock)


state 83

    7 AditionalVarPart: VarDecl SEMIC AditionalVarPart .

    $default  reduce using rule 7 (AditionalVarPart)


state 84

   25 FormalParams: VAR IdList . COLON ID

    COLON  shift, and go to state 107


state 85

   24 FormalParams: IdList COLON . ID

    ID  shift, and go to state 108


state 86

   22 AditionalFormalParams: SEMIC . FormalParams AditionalFormalParams

    ID   shift, and go to state 13
    VAR  shift, and go to state 58

    IdList        go to state 59
    FormalParams  go to state 109


state 87

   21 FormalParamsList: LBRAC FormalParams AditionalFormalParams . RBRAC

    RBRAC  shift, and go to state 110


state 88

   19 FuncHeading: FUNCTION ID FormalParamsList COLON ID .

    $default  reduce using rule 19 (FuncHeading)


state 89

   38 Statement: ID ASSIGN Expression .

    $default  reduce using rule 38 (Statement)


state 90

   63 ParamList: LBRAC . Expression AditionalParams RBRAC

    ID       shift, and go to state 63
    INTLIT   shift, and go to state 64
    REALLIT  shift, and go to state 65
    LBRAC    shift, and go to state 66
    NOT      shift, and go to state 67
    OP3      shift, and go to state 68
